--- a/client/src/app/rooms/rooms.component.html
+++ b/client/src/app/rooms/rooms.component.html
@@ -1,7 +1,7 @@
 <mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
   <mat-card-title>MINHAS SALAS</mat-card-title>
   <div class="question-component" [hidden]="hasRooms">
-    <span>Você ainda não criou salas.</span>
+    <span>Você não possui salas criadas.</span>
   </div>
   <div class="question-component">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasRooms">
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
         <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button mat-button color="primary" (click)="openRoomModal(element)">Editar</button>
+          <button mat-button color="primary" (click)="editRoom(element.id)">Editar</button>
           <button mat-button color="warn" (click)="remove(element.id)">Excluir</button>
         </td>
       </ng-container>
@@ -42,6 +42,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <button (click)="openRoomModal(null)" style="margin-top: 20px" mat-raised-button color="primary">Nova Sala</button>
+    <button (click)="editRoom(0)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR SALA</button>
   </div>
 </mat-card>
