--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -154,3 +154,12 @@ body {
 mat-nav-list mat-list-item {
   height: 30px !important;
 }
+
+.root-card{
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+th.mat-header-cell {
+  text-align: center !important;
+}
