--- a/client/src/app/questions/all-questions/all-questions.component.html
+++ b/client/src/app/questions/all-questions/all-questions.component.html
@@ -1,4 +1,4 @@
-<mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
+<mat-card class="root-card">
   <mat-card-title>QUESTÕES PÚBLICAS</mat-card-title>
   <div class="question-component">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
