--- a/client/src/app/room/opened-rooms/opened-rooms.component.html
+++ b/client/src/app/room/opened-rooms/opened-rooms.component.html
@@ -1,14 +1,14 @@
-<mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
-  <mat-card-title>MINHAS SALAS</mat-card-title>
+<mat-card class="root-card">
+  <mat-card-title>SALAS ABERTAS</mat-card-title>
   <div class="question-component" [hidden]="hasRooms">
-    <span>Você não possui salas criadas.</span>
+    <span>Nenhuma sala aberta no momento.</span>
   </div>
   <div class="question-component">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasRooms">
+    <table mat-table [dataSource]="dataSource" style="width: 100%; text-align: center !important" class="mat-elevation-z8" [hidden]="!hasRooms">
 
-      <ng-container matColumnDef="id">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
-        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <ng-container matColumnDef="owner">
+        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Dono </th>
+        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.owner}} </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
@@ -18,15 +18,15 @@
 
       <ng-container matColumnDef="users">
         <th mat-header-cell *matHeaderCellDef> Usuários </th>
-        <td mat-cell *matCellDef="let element"> {{element.users.length}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.users}} </td>
       </ng-container>
 
       <ng-container matColumnDef="questions">
         <th mat-header-cell *matHeaderCellDef> Questões </th>
-        <td mat-cell *matCellDef="let element"> {{element.questions.length}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.questions}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="seconds">
+      <ng-container matColumnDef="time">
         <th mat-header-cell *matHeaderCellDef> Tempo </th>
         <td mat-cell *matCellDef="let element"> {{element.time}} </td>
       </ng-container>
@@ -34,14 +34,14 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
         <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button mat-button color="primary" (click)="editRoom(element.id)">Editar</button>
-          <button mat-button color="warn" (click)="remove(element.id)">Excluir</button>
+          <button mat-button color="primary" (click)="associate(element)">
+            {{element.associate ? 'DEIXAR' : 'PARTICIPAR' }}
+          </button>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <button (click)="editRoom(0)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR SALA</button>
   </div>
 </mat-card>
