#110 - Listagem de salas que o usuário já participou

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,7 +11,7 @@
           <button [disabled]="path === '/my-rooms'" mat-raised-button color="primary" routerLink="/my-rooms">CRIADAS</button>
         </mat-list-item>
         <mat-list-item>
-          <button [disabled]="path === '/participated-rooms'" mat-raised-button color="primary" routerLink="/participated-rooms">PARTICIPAÇÕES</button>
+          <button [disabled]="path === '/associated-rooms'" mat-raised-button color="primary" routerLink="/associated-rooms">PARTICIPAÇÕES</button>
         </mat-list-item>
         <mat-list-item>
           <button [disabled]="path === '/opened-rooms'" mat-raised-button color="primary" routerLink="/opened-rooms">ABERTAS</button>
