#139 Autenticação com o google

--- a/client/src/app/account/singin/singin.component.html
+++ b/client/src/app/account/singin/singin.component.html
@@ -1,6 +1,10 @@
 <form (submit)="loginUser()" #loginForm="ngForm" class="account-component">
   <mat-card>
-    <mat-card-title>Login</mat-card-title>
+    <app-google-button></app-google-button>
+
+    <div class="or-elem">
+      <span>OU</span>
+    </div>
 
     <mat-form-field>
       <input matInput placeholder="Seu email" appEmail [formControl]="user.email" required (change)="cleanError()" />
