--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -22,8 +22,31 @@
         <button [disabled]="path === '/signup'" mat-button routerLink="/signup">Cadastre-se</button>
       </div>
       <div [hidden]="!logged">
-        <button mat-button (click)="logout()">Sair</button>
-        <button [disabled]="path === '/sign-edit'" mat-button routerLink="/sign-edit">Minha conta</button>
+        <button mat-icon-button>
+          <mat-icon>notifications</mat-icon>
+        </button>
+        <button mat-icon-button [matMenuTriggerFor]="accountMenu">
+          <mat-icon>person</mat-icon>
+        </button>
+        <mat-menu #accountMenu="matMenu">
+          <div class="account-data" style="padding: 10px">
+            <div fxLayout="row">
+              <div fxFlex="60px">
+                <img style="border-radius: 50%" height="50" src="{{user.picture}}" />
+              </div>
+              <div>
+                <span class="account-name">{{user.name}}</span>
+                <br />
+                <span class="account-email">{{user.email}}</span>
+              </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="action-button">
+              <button [disabled]="path === '/sign-edit'" routerLink="/sign-edit" mat-raised-button>EDITAR CONTA</button>
+              <button mat-raised-button (click)="logout()" color="primary">SAIR</button>
+            </div>
+          </div>
+        </mat-menu>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
