--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -23,7 +23,7 @@
       </div>
       <div [hidden]="!logged">
         <button mat-icon-button>
-          <mat-icon>notifications</mat-icon>
+          <mat-icon (click)="clearNotifications()" [matBadge]="notifications" [matBadgeHidden]="notifications == 0" matBadgeColor="warn">notifications</mat-icon>
         </button>
         <button mat-icon-button [matMenuTriggerFor]="accountMenu">
           <mat-icon>person</mat-icon>
@@ -32,17 +32,18 @@
           <div class="account-data" style="padding: 10px">
             <div fxLayout="row">
               <div fxFlex="60px">
-                <img style="border-radius: 50%" height="50" src="{{user.picture}}" />
+                <img style="border-radius: 50%" height="50" width="50" src="{{user.picture}}" />
               </div>
               <div>
                 <span class="account-name">{{user.name}}</span>
+                <br />
                 <br />
                 <span class="account-email">{{user.email}}</span>
               </div>
             </div>
             <mat-divider></mat-divider>
             <div class="action-button">
-              <button [disabled]="path === '/sign-edit'" routerLink="/sign-edit" mat-raised-button>EDITAR CONTA</button>
+              <button [disabled]="path === '/sign-edit'" routerLink="/sign-edit" mat-raised-button>CONTA</button>
               <button mat-raised-button (click)="logout()" color="primary">SAIR</button>
             </div>
           </div>
