--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -22,8 +22,8 @@
         <button [disabled]="path === '/signup'" mat-button routerLink="/signup">Cadastre-se</button>
       </div>
       <div [hidden]="!logged">
-        <button mat-icon-button>
-          <mat-icon (click)="clearNotifications()" [matBadge]="notifications" [matBadgeHidden]="notifications == 0" matBadgeColor="warn">notifications</mat-icon>
+        <button mat-icon-button (click)="openNotifications()">
+          <mat-icon [matBadge]="notifications" [matBadgeHidden]="notifications == 0" matBadgeColor="warn">notifications</mat-icon>
         </button>
         <button mat-icon-button [matMenuTriggerFor]="accountMenu">
           <mat-icon>person</mat-icon>
