--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -21,36 +21,43 @@
         <button [disabled]="path === '/signin'" mat-button routerLink="/signin">Entrar</button>
         <button [disabled]="path === '/signup'" mat-button routerLink="/signup">Cadastre-se</button>
       </div>
-      <div [hidden]="!logged">
+      <div [hidden]="!logged" style="margin-right: 20px; margin-top: -10px">
         <button mat-icon-button (click)="updateTimeNotifications()" [matMenuTriggerFor]="notificationMenu">
           <mat-icon [matBadge]="notifPendings" [matBadgeHidden]="notifPendings == 0" matBadgeColor="warn">notifications</mat-icon>
         </button>
-        <mat-menu #notificationMenu="matMenu">
+        <button mat-icon-button [matMenuTriggerFor]="accountMenu">
+          <img style="background-color: white;border-radius: 50%;box-shadow: 0 0 15px #999" height="60" width="60" src="{{user.picture || 'api/image/user-image.png'}}"
+          />
+        </button>
+        <mat-menu #notificationMenu="matMenu" style="overflow: hidden;">
           <span class="no-content-message" [hidden]="notifications.length > 0">Sem notificações</span>
           <mat-divider></mat-divider>
-          <div *ngFor="let n of notifications" class="notification-content">
-            <div>
+          <div class="notification-content">
+            <div *ngFor="let n of notifications">
               <div>
-                <div class="icon-actions">
-                  <mat-icon style="color:aqua;" *ngIf="!n.read">lens</mat-icon>
-                  <mat-icon (click)="removeNotification(n)" style="color:#B44;cursor: pointer; width: 3px">close</mat-icon>
+                <div>
+                  <div class="icon-actions">
+                    <mat-icon style="color:aqua;" *ngIf="!n.read">lens</mat-icon>
+                    <mat-icon matTooltip="Remover" (click)="removeNotification(n)" style="color:#B44;cursor: pointer; width: 3px">close</mat-icon>
+                  </div>
                 </div>
+                <span style="font-weight: bold">{{n.origin}} </span>
+                <span>{{n.description}}</span>
               </div>
-              <span style="font-weight: bold">{{n.origin}} </span>
-              <span>{{n.description}}</span>
+              <div class="elapsed-time">{{n.elapsedTime}}</div>
+              <mat-divider></mat-divider>
             </div>
-            <div class="elapsed-time">{{n.elapsedTime}}</div>
-            <mat-divider></mat-divider>
+          </div>
+          <div class="action-button" [hidden]="notifications.length == 0">
+            <a *ngIf="hasNoRead" (click)="maskAsRead()" href="#">Marcar como lidas</a>
+            <a (click)="removeAllnotifications()" href="#">Remover Todas</a>
           </div>
         </mat-menu>
-        <button mat-icon-button [matMenuTriggerFor]="accountMenu">
-          <mat-icon>person</mat-icon>
-        </button>
         <mat-menu #accountMenu="matMenu">
           <div class="account-data" style="padding: 10px">
             <div fxLayout="row">
               <div fxFlex="60px">
-                <img style="border-radius: 50%" height="50" width="50" src="{{user.picture}}" />
+                <img style="border-radius: 50%" height="50" width="50" src="{{user.picture || 'api/image/user-image.png'}}" />
               </div>
               <div>
                 <span class="account-name">{{user.name}}</span>
