--- a/client/src/app/room/associated-rooms/associated-rooms.component.html
+++ b/client/src/app/room/associated-rooms/associated-rooms.component.html
@@ -13,7 +13,7 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Situação </th>
-        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.descriptionStatus}} </td>
       </ng-container>
 
       <ng-container matColumnDef="time">
