--- a/client/src/app/room/my-rooms/my-rooms.component.html
+++ b/client/src/app/room/my-rooms/my-rooms.component.html
@@ -7,13 +7,22 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasRooms">
 
       <ng-container matColumnDef="id">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
+        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Nº </th>
         <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Situação </th>
+        <td mat-cell *matCellDef="let element">
+          <span style="color:#666;font-weight: bold">
+            {{element.descriptionStatus}}
+          </span>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="users">
@@ -34,8 +43,24 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
         <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button mat-button color="primary" (click)="editRoom(element.id)">Editar</button>
-          <button mat-button color="warn" (click)="remove(element.id)">Excluir</button>
+          <button *ngIf="element.status === 'CLOSED'" matTooltip="ABRIR SALA" style="margin-right: 10px" mat-icon-button mat-raised-button
+            (click)="changeStatus(element, 'OPENED')">
+            <mat-icon color="primary">call_made</mat-icon>
+          </button>
+          <button *ngIf="element.status === 'OPENED'" matTooltip="INICIAR" style="margin-right: 10px" mat-icon-button mat-raised-button
+            (click)="changeStatus(element, 'STARTED')">
+            <mat-icon color="primary">play_arrow</mat-icon>
+          </button>
+          <button *ngIf="element.status === 'STARTED'" matTooltip="PARAR" style="margin-right: 10px" mat-icon-button mat-raised-button
+            (click)="changeStatus(element, 'CLOSED')">
+            <mat-icon color="primary">power_settings_new</mat-icon>
+          </button>
+          <button matTooltip="EDITAR" style="margin-right: 10px" mat-icon-button mat-raised-button (click)="editRoom(element.id)">
+            <mat-icon color="primary">edit</mat-icon>
+          </button>
+          <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element.id)">
+            <mat-icon color="warn">remove</mat-icon>
+          </button>
         </td>
       </ng-container>
 
