--- a/client/src/app/room/edit-room/edit-room.component.html
+++ b/client/src/app/room/edit-room/edit-room.component.html
@@ -21,7 +21,9 @@
 
     <ng-container matColumnDef="order">
       <th mat-header-cell *matHeaderCellDef> Ordem </th>
-      <td mat-cell *matCellDef="let element"> {{element.order || '?'}} </td>
+      <td mat-cell *matCellDef="let element">
+        {{element.order || '?'}}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="category">
@@ -41,8 +43,18 @@
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
-      <td mat-cell *matCellDef="let element" style="width: 180px">
+      <td mat-cell *matCellDef="let element;let rIndex = index" style="width: 180px">
         <button mat-button color="warn" (click)="remove(element.id)">REMOVER</button>
+        <div style="display: inline-block;width: 40px">
+          <button matTooltip="MOVER PARA CIMA" mat-icon-button (click)="changeIndex(rIndex, -1)" *ngIf="rIndex > 0" color="primary"
+            style="width: 20px">
+            <mat-icon>expand_less</mat-icon>
+          </button>
+          <button matTooltip="MOVER PARA BAIXO" mat-icon-button (click)="changeIndex(rIndex, 1)" *ngIf="rIndex < this.dataSource.data.length - 1"
+            color="primary" style="width: 20px">
+            <mat-icon>expand_more</mat-icon>
+          </button>
+        </div>
       </td>
     </ng-container>
 
