--- a/client/src/app/room/my-rooms/my-rooms.component.html
+++ b/client/src/app/room/my-rooms/my-rooms.component.html
@@ -55,10 +55,10 @@
             (click)="changeStatus(element, 'CLOSED')">
             <mat-icon color="primary">power_settings_new</mat-icon>
           </button>
-          <button matTooltip="EDITAR" style="margin-right: 10px" mat-icon-button mat-raised-button (click)="editRoom(element.id)">
+          <button matTooltip="EDITAR" style="margin-right: 10px" mat-icon-button mat-raised-button (click)="editRoom(element)">
             <mat-icon color="primary">edit</mat-icon>
           </button>
-          <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element.id)">
+          <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element)">
             <mat-icon color="warn">remove</mat-icon>
           </button>
         </td>
