#128 #130 - Enviar notificação quando sala for iniciada ou removida

--- a/client/src/app/room/my-rooms/my-rooms.component.html
+++ b/client/src/app/room/my-rooms/my-rooms.component.html
@@ -67,6 +67,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <button (click)="editRoom(0)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR SALA</button>
+    <button (click)="editRoom(null)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR SALA</button>
   </div>
 </mat-card>
