--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -97,7 +97,8 @@ $theme:   mat-light-theme($primary, $accent);
   a{
     color:#666;
     font-size: 12px;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
   }
 }
 
