--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -38,8 +38,12 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
         <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button mat-button color="primary" (click)="openQuestionModal(element)">Editar</button>
-          <button mat-button color="warn" (click)="remove(element.id)">Excluir</button>
+          <button matTooltip="EDITAR" style="margin-right: 10px" mat-icon-button mat-raised-button (click)="openQuestionModal(element)">
+            <mat-icon color="primary">edit</mat-icon>
+          </button>
+          <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element.id)">
+            <mat-icon color="warn">delete</mat-icon>
+          </button>
         </td>
       </ng-container>
 
