--- a/client/src/app/room/edit-room/edit-room.component.html
+++ b/client/src/app/room/edit-room/edit-room.component.html
@@ -21,8 +21,14 @@
 
     <ng-container matColumnDef="order">
       <th mat-header-cell *matHeaderCellDef> Ordem </th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element;let rIndex = index">
+        <div>
+          <i class="up"(click)="changeIndex(rIndex, -1)" *ngIf="rIndex > 0"></i>
+        </div>
         {{element.order || '?'}}
+        <div>
+          <i class="down" (click)="changeIndex(rIndex, 1)" *ngIf="rIndex < this.dataSource.data.length - 1"></i>
+        </div>
       </td>
     </ng-container>
 
@@ -38,23 +44,21 @@
 
     <ng-container matColumnDef="points">
       <th mat-header-cell *matHeaderCellDef> Pontos </th>
-      <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+      <td mat-cell *matCellDef="let element" style="padding: 10px">
+        <div>
+          <i class="up" (click)="changePoints(element, 10)"></i>
+        </div>
+        <span style="height: 5px">{{element.points}}</span>
+        <div>
+          <i class="down" (click)="changePoints(element, -10)"></i>
+        </div>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
-      <td mat-cell *matCellDef="let element;let rIndex = index" style="width: 180px">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let element;let rIndex = index">
         <button mat-button color="warn" (click)="remove(element.id)">REMOVER</button>
-        <div style="display: inline-block;width: 40px">
-          <button matTooltip="MOVER PARA CIMA" mat-icon-button (click)="changeIndex(rIndex, -1)" *ngIf="rIndex > 0" color="primary"
-            style="width: 20px">
-            <mat-icon>expand_less</mat-icon>
-          </button>
-          <button matTooltip="MOVER PARA BAIXO" mat-icon-button (click)="changeIndex(rIndex, 1)" *ngIf="rIndex < this.dataSource.data.length - 1"
-            color="primary" style="width: 20px">
-            <mat-icon>expand_more</mat-icon>
-          </button>
-        </div>
       </td>
     </ng-container>
 
