--- a/client/src/app/room/my-rooms/my-rooms.component.html
+++ b/client/src/app/room/my-rooms/my-rooms.component.html
@@ -19,9 +19,10 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Situação </th>
         <td mat-cell *matCellDef="let element">
-          <span style="color:#666;font-weight: bold">
+          <span class="room-status">
             {{element.descriptionStatus}}
           </span>
+          <mat-progress-bar *ngIf="element.status === 'STARTED'" mode="indeterminate"></mat-progress-bar>
         </td>
       </ng-container>
 
@@ -59,7 +60,7 @@
             <mat-icon color="primary">edit</mat-icon>
           </button>
           <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element)">
-            <mat-icon color="warn">remove</mat-icon>
+            <mat-icon color="warn">delete</mat-icon>
           </button>
         </td>
       </ng-container>
