--- a/client/src/app/account/singup/singup.component.html
+++ b/client/src/app/account/singup/singup.component.html
@@ -33,8 +33,8 @@
         <mat-form-field>
           <input matInput #confirm="ngModel" name="confirm" type="password" appConfirmEqualValidator="password" placeholder="Confirme a senha"
             [(ngModel)]="user.confirm" required (change)="cleanError()" />
-          <mat-error *ngIf="confirm.errors?.notequal && password.valid">As senhas não batem</mat-error>
-          <mat-error *ngIf="confirm.errors?.required && password.valid">Confirme a senha</mat-error>
+          <mat-error *ngIf="confirm.errors?.notequal && password?.valid">As senhas não batem</mat-error>
+          <mat-error *ngIf="confirm.errors?.required && password?.valid">Confirme a senha</mat-error>
         </mat-form-field>
       </div>
       <br />
