--- a/client/src/app/room/quiz/quiz.component.css
+++ b/client/src/app/room/quiz/quiz.component.css
@@ -91,3 +91,10 @@
 .time-over { color: #5f9ed4; }
 
 .sent { color: blue; }
+.unavailable {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: #666;
+  padding: 30px;
+}
