--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -140,6 +140,7 @@ body {
   padding-bottom: 20px;
   border-radius: 0 0 10px 0;
   margin-right: 10px;
+  height: 280px;
   
   button{
     color: white;
