--- a/client/src/app/room/quiz/quiz.component.css
+++ b/client/src/app/room/quiz/quiz.component.css
@@ -93,8 +93,17 @@
 .sent { color: blue; }
 .unavailable {
   text-align: center;
-  font-size: 20px;
+  font-size: 28px;
   font-weight: bold;
   color: #666;
   padding: 30px;
+}
+
+.score {
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+.score span{
+  color: #4b9372;
 }
