--- a/client/src/app/room/associated-rooms/associated-rooms.component.html
+++ b/client/src/app/room/associated-rooms/associated-rooms.component.html
@@ -13,9 +13,9 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Situação </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
           <span class="room-status">{{element.descriptionStatus}}</span>
-         </td>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="time">
@@ -25,14 +25,14 @@
 
       <ng-container matColumnDef="score">
         <th mat-header-cell *matHeaderCellDef> Pontuação </th>
-        <td mat-cell *matCellDef="let element"> {{element.score || '???'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.status === 'ENDED' ? (element.score || 0) : '???'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
         <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button *ngIf="element.status === 'ENDED'" mat-button color="primary">PONTUAÇÕES</button>
-          <button routerLink="/quiz/{{element.id}}" *ngIf="element.status === 'STARTED'" matTooltip="ACESSAR"  mat-icon-button mat-raised-button>
+          <button (click)="openScores(element)" *ngIf="element.status === 'ENDED'" mat-button color="primary">PONTUAÇÕES</button>
+          <button routerLink="/quiz/{{element.id}}" *ngIf="element.status === 'STARTED'" matTooltip="ACESSAR" mat-icon-button mat-raised-button>
             <mat-icon color="primary">trending_flat</mat-icon>
           </button>
         </td>
