Exibição dos pontos na tela de participações

--- a/client/src/app/room/opened-rooms/opened-rooms.component.html
+++ b/client/src/app/room/opened-rooms/opened-rooms.component.html
@@ -1,47 +1,52 @@
 <mat-card class="root-card">
   <mat-card-title>SALAS ABERTAS</mat-card-title>
-  <div class="question-component" [hidden]="hasRooms">
-    <span>Nenhuma sala aberta no momento.</span>
+  <div [hidden]="loading">
+    <div class="question-component" [hidden]="hasRooms">
+      <span>Nenhuma sala aberta no momento.</span>
+    </div>
+    <div class="question-component">
+      <table mat-table [dataSource]="dataSource" style="width: 100%; text-align: center !important" class="mat-elevation-z8" [hidden]="!hasRooms">
+
+        <ng-container matColumnDef="owner">
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef> Dono </th>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.owner}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="users">
+          <th mat-header-cell *matHeaderCellDef> Usuários </th>
+          <td mat-cell *matCellDef="let element"> {{element.users}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="questions">
+          <th mat-header-cell *matHeaderCellDef> Questões </th>
+          <td mat-cell *matCellDef="let element"> {{element.questions}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="time">
+          <th mat-header-cell *matHeaderCellDef> Tempo </th>
+          <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
+          <td mat-cell *matCellDef="let element" style="width: 180px">
+            <button mat-button color="primary" (click)="associate(element)">
+              {{element.associate ? 'DEIXAR' : 'PARTICIPAR' }}
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
   </div>
-  <div class="question-component">
-    <table mat-table [dataSource]="dataSource" style="width: 100%; text-align: center !important" class="mat-elevation-z8" [hidden]="!hasRooms">
-
-      <ng-container matColumnDef="owner">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Dono </th>
-        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.owner}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="users">
-        <th mat-header-cell *matHeaderCellDef> Usuários </th>
-        <td mat-cell *matCellDef="let element"> {{element.users}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="questions">
-        <th mat-header-cell *matHeaderCellDef> Questões </th>
-        <td mat-cell *matCellDef="let element"> {{element.questions}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef> Tempo </th>
-        <td mat-cell *matCellDef="let element"> {{element.time}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
-        <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button mat-button color="primary" (click)="associate(element)">
-            {{element.associate ? 'DEIXAR' : 'PARTICIPAR' }}
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+  <div *ngIf="loading" class="loading">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
 </mat-card>
