--- a/client/src/app/modals/room-question-modal.component.html
+++ b/client/src/app/modals/room-question-modal.component.html
@@ -6,7 +6,14 @@
     </div>
   </div>
 
-  <div [hidden]="!hasQuestions">
+  <div class="question-component" *ngIf="allSelected">
+    <span>Todas as questões já foram incluídas.</span>
+    <div class="action-button">
+      <button mat-raised-button mat-dialog-close>OK</button>
+    </div>
+  </div>
+
+  <div [hidden]="!hasQuestions || allSelected ">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%">
 
       <ng-container matColumnDef="category">
@@ -17,11 +24,6 @@
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Descrição </th>
         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="points">
-        <th mat-header-cell *matHeaderCellDef> Pontos </th>
-        <td mat-cell *matCellDef="let element"> {{element.points}} </td>
       </ng-container>
 
       <ng-container matColumnDef="selected">
