--- a/client/src/app/questions/all-questions/all-questions.component.html
+++ b/client/src/app/questions/all-questions/all-questions.component.html
@@ -1,25 +1,33 @@
 <mat-card class="root-card">
   <mat-card-title>QUESTÕES PÚBLICAS</mat-card-title>
-  <div class="question-component">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div [hidden]="loading">
+    <div class="question-component" [hidden]="hasQuestions">
+      <span>Nenhuma questão foi encontrada.</span>
+    </div>
+    <div class="question-component" [hidden]="!hasQuestions">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="id">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
-        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
+        <ng-container matColumnDef="id">
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="category">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Área </th>
-        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.category}} </td>
-      </ng-container>
+        <ng-container matColumnDef="category">
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef> Área </th>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Descrição </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-      </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> Descrição </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+  </div>
+  <div *ngIf="loading" class="loading">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
 </mat-card>
