--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -1,51 +1,56 @@
 <mat-card class="root-card">
   <mat-card-title>MINHAS QUESTÕES</mat-card-title>
-  <div class="question-component" [hidden]="hasQuestions">
-    <span>Você não possui questões.</span>
+  <div [hidden]="loading">
+    <div class="question-component" [hidden]="hasQuestions">
+      <span>Você não possui questões.</span>
+    </div>
+    <div class="question-component">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions">
+
+        <ng-container matColumnDef="id">
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Área </th>
+          <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrição </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="shared">
+          <th mat-header-cell *matHeaderCellDef> Compartilhada? </th>
+          <td mat-cell *matCellDef="let element">
+            <mat-checkbox (change)="sharedChanged(element)" color="primary" [(ngModel)]="element.shared">
+              {{element.shared ? 'Sim' : 'Não'}}
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
+          <td mat-cell *matCellDef="let element" style="width: 180px">
+            <button matTooltip="EDITAR" style="margin-right: 10px" mat-icon-button mat-raised-button (click)="openQuestionModal(element)">
+              <mat-icon color="primary">edit</mat-icon>
+            </button>
+            <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element.id)">
+              <mat-icon color="warn">delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5]" showFirstLastButtons></mat-paginator>
+      <button (click)="openQuestionModal(null)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR QUESTÃO</button>
+    </div>
   </div>
-  <div class="question-component">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions">
-
-      <ng-container matColumnDef="id">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
-        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Área </th>
-        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrição </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="shared">
-        <th mat-header-cell *matHeaderCellDef> Compartilhada? </th>
-        <td mat-cell *matCellDef="let element">
-          <mat-checkbox (change)="sharedChanged(element)" color="primary" [(ngModel)]="element.shared">
-            {{element.shared ? 'Sim' : 'Não'}}
-          </mat-checkbox>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
-        <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button matTooltip="EDITAR" style="margin-right: 10px" mat-icon-button mat-raised-button (click)="openQuestionModal(element)">
-            <mat-icon color="primary">edit</mat-icon>
-          </button>
-          <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element.id)">
-            <mat-icon color="warn">delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5]" showFirstLastButtons></mat-paginator>
-    <button (click)="openQuestionModal(null)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR QUESTÃO</button>
+  <div *ngIf="loading" class="loading">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
 </mat-card>
