--- a/client/src/app/room/edit-room/edit-room.component.html
+++ b/client/src/app/room/edit-room/edit-room.component.html
@@ -1,83 +1,88 @@
 <mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
   <mat-card-title>{{room.name}}</mat-card-title>
-  <div>
-    <mat-form-field>
-      <input matInput [(ngModel)]="room.name" maxlength="255" placeholder="Nome da sala" required />
-    </mat-form-field>
-    <span class="app-spacer"></span>
-    <span class="app-spacer"></span>
-    <span class="app-spacer"></span>
-    <span class="app-spacer"></span>
-    <mat-form-field style="margin-left: 50px; width: 220px">
-      <input type="tel" maxlength="3" mask matInput [(ngModel)]="room.time" placeholder="Tempo de cada questão (segundos)" required/>
-    </mat-form-field>
+  <div [hidden]="loading">
+    <div>
+      <mat-form-field>
+        <input matInput [(ngModel)]="room.name" maxlength="255" placeholder="Nome da sala" required />
+      </mat-form-field>
+      <span class="app-spacer"></span>
+      <span class="app-spacer"></span>
+      <span class="app-spacer"></span>
+      <span class="app-spacer"></span>
+      <mat-form-field style="margin-left: 50px; width: 220px">
+        <input type="tel" maxlength="3" mask matInput [(ngModel)]="room.time" placeholder="Tempo de cada questão (segundos)" required/>
+      </mat-form-field>
+    </div>
+
+    <div class="question-component" [hidden]="hasQuestions">
+      <span>Sala sem questões.</span>
+    </div>
+
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions" style="width: 100%">
+
+      <ng-container matColumnDef="order">
+        <th mat-header-cell *matHeaderCellDef> Ordem </th>
+        <td mat-cell *matCellDef="let element;let rIndex = index">
+          <div>
+            <i class="up" (click)="changeIndex(rIndex, -1)" *ngIf="rIndex > 0"></i>
+          </div>
+          {{element.order || '?'}}
+          <div>
+            <i class="down" (click)="changeIndex(rIndex, 1)" *ngIf="rIndex < this.dataSource.data.length - 1"></i>
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Área </th>
+        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="points">
+        <th mat-header-cell *matHeaderCellDef> Pontos </th>
+        <td mat-cell *matCellDef="let element" style="padding: 10px">
+          <div>
+            <i class="up" (click)="changePoints(element, 10)"></i>
+          </div>
+          <span style="height: 5px">{{element.points}}</span>
+          <div>
+            <i class="down" (click)="changePoints(element, -10)"></i>
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element;let rIndex = index">
+          <button mat-button color="warn" (click)="remove(element)">REMOVER</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <br />
+    <div class="action-button">
+      <mat-form-field>
+        <mat-select [(ngModel)]="orderOption" (selectionChange)="orderOptionChanged()" placeholder="Ordenação">
+          <mat-option *ngFor="let c of orderOptions" [value]="c.value">
+            {{ c.description }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="openQuestionModal()">ADICIONAR QUESTÕES</button>
+    </div>
+    <br />
+    <div class="action-button">
+      <button [disabled]="!room.name || !room.time" mat-raised-button color="primary" (click)="saveRoom()">SALVAR</button>
+    </div>
   </div>
-
-  <div class="question-component" [hidden]="hasQuestions">
-    <span>Sala sem questões.</span>
-  </div>
-
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions" style="width: 100%">
-
-    <ng-container matColumnDef="order">
-      <th mat-header-cell *matHeaderCellDef> Ordem </th>
-      <td mat-cell *matCellDef="let element;let rIndex = index">
-        <div>
-          <i class="up" (click)="changeIndex(rIndex, -1)" *ngIf="rIndex > 0"></i>
-        </div>
-        {{element.order || '?'}}
-        <div>
-          <i class="down" (click)="changeIndex(rIndex, 1)" *ngIf="rIndex < this.dataSource.data.length - 1"></i>
-        </div>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef> Área </th>
-      <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Descrição </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="points">
-      <th mat-header-cell *matHeaderCellDef> Pontos </th>
-      <td mat-cell *matCellDef="let element" style="padding: 10px">
-        <div>
-          <i class="up" (click)="changePoints(element, 10)"></i>
-        </div>
-        <span style="height: 5px">{{element.points}}</span>
-        <div>
-          <i class="down" (click)="changePoints(element, -10)"></i>
-        </div>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let element;let rIndex = index">
-        <button mat-button color="warn" (click)="remove(element)">REMOVER</button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <br />
-  <div class="action-button">
-    <mat-form-field>
-      <mat-select [(ngModel)]="orderOption" (selectionChange)="orderOptionChanged()" placeholder="Ordenação">
-        <mat-option *ngFor="let c of orderOptions" [value]="c.value">
-          {{ c.description }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="openQuestionModal()">ADICIONAR QUESTÕES</button>
-  </div>
-  <br />
-  <div class="action-button">
-    <button [disabled]="!room.name || !room.time" mat-raised-button color="primary" (click)="saveRoom()">SALVAR</button>
+  <div *ngIf="loading" class="loading">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
 </mat-card>
