--- a/client/src/app/room/my-rooms/my-rooms.component.html
+++ b/client/src/app/room/my-rooms/my-rooms.component.html
@@ -1,90 +1,95 @@
 <mat-card class="root-card">
   <mat-card-title>MINHAS SALAS</mat-card-title>
-  <div class="question-component" [hidden]="hasRooms">
-    <span>Você não possui salas criadas.</span>
+  <div [hidden]="loading">
+    <div class="question-component" [hidden]="hasRooms">
+      <span>Você não possui salas criadas.</span>
+    </div>
+    <div class="question-component">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasRooms">
+
+        <ng-container matColumnDef="id">
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef> Nº </th>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Situação </th>
+          <td mat-cell *matCellDef="let element">
+            <span class="room-status">
+              {{element.descriptionStatus}}
+            </span>
+            <div class="room-changes-status">
+              Criada em: {{element.createdAt | date: 'dd/MM/yy HH:mm'}}
+            </div>
+            <div *ngIf="element.openedAt" class="room-changes-status">
+              Aberta em: {{element.openedAt | date: 'dd/MM/yy HH:mm'}}
+            </div>
+            <div *ngIf="element.startedAt" class="room-changes-status">
+              Iniciada em: {{element.startedAt | date: 'dd/MM/yy HH:mm'}}
+            </div>
+            <div *ngIf="element.endedAt" class="room-changes-status">
+              Finalizada em: {{element.endedAt | date: 'dd/MM/yy HH:mm'}}
+            </div>
+            <mat-progress-bar *ngIf="element.status === 'STARTED'" mode="indeterminate"></mat-progress-bar>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="users">
+          <th mat-header-cell *matHeaderCellDef> Usuários </th>
+          <td mat-cell *matCellDef="let element"> {{element.users.length}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="questions">
+          <th mat-header-cell *matHeaderCellDef> Questões </th>
+          <td mat-cell *matCellDef="let element"> {{element.questions.length}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="seconds">
+          <th mat-header-cell *matHeaderCellDef> Tempo </th>
+          <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
+          <td mat-cell *matCellDef="let element" style="width: 180px">
+            <button *ngIf="element.status === 'CLOSED'" matTooltip="ABRIR SALA" style="margin-right: 10px" mat-icon-button mat-raised-button
+              (click)="changeStatus(element, 'OPENED')">
+              <mat-icon color="primary">call_made</mat-icon>
+            </button>
+            <button *ngIf="element.status === 'OPENED'" matTooltip="INICIAR" style="margin-right: 10px" mat-icon-button mat-raised-button
+              (click)="changeStatus(element, 'STARTED')">
+              <mat-icon color="primary">play_arrow</mat-icon>
+            </button>
+            <button *ngIf="element.status === 'STARTED'" matTooltip="PARAR" style="margin-right: 10px" mat-icon-button mat-raised-button
+              (click)="changeStatus(element, 'CLOSED')">
+              <mat-icon color="primary">power_settings_new</mat-icon>
+            </button>
+            <button *ngIf="element.status !== 'STARTED' && element.status !== 'ENDED'" matTooltip="EDITAR" style="margin-right: 10px"
+              mat-icon-button mat-raised-button (click)="editRoom(element)">
+              <mat-icon color="primary">edit</mat-icon>
+            </button>
+            <button *ngIf="element.status !== 'STARTED' && element.status !== 'ENDED'" matTooltip="REMOVER" mat-icon-button mat-raised-button
+              (click)="remove(element)">
+              <mat-icon color="warn">delete</mat-icon>
+            </button>
+            <button *ngIf="element.status === 'ENDED'" mat-raised-button color="primary" (click)="remove(element)">
+              PONTUAÇÕES
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <button (click)="editRoom(null)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR SALA</button>
+    </div>
   </div>
-  <div class="question-component">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasRooms">
-
-      <ng-container matColumnDef="id">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Nº </th>
-        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Situação </th>
-        <td mat-cell *matCellDef="let element">
-          <span class="room-status">
-            {{element.descriptionStatus}}
-          </span>
-          <div class="room-changes-status">
-            Criada em: {{element.createdAt | date: 'dd/MM/yy HH:mm'}}
-          </div>
-          <div *ngIf="element.openedAt" class="room-changes-status">
-            Aberta em: {{element.openedAt | date: 'dd/MM/yy HH:mm'}}
-          </div>
-          <div *ngIf="element.startedAt" class="room-changes-status">
-            Iniciada em: {{element.startedAt | date: 'dd/MM/yy HH:mm'}}
-          </div>
-          <div *ngIf="element.endedAt" class="room-changes-status">
-            Finalizada em: {{element.endedAt | date: 'dd/MM/yy HH:mm'}}
-          </div>
-          <mat-progress-bar *ngIf="element.status === 'STARTED'" mode="indeterminate"></mat-progress-bar>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="users">
-        <th mat-header-cell *matHeaderCellDef> Usuários </th>
-        <td mat-cell *matCellDef="let element"> {{element.users.length}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="questions">
-        <th mat-header-cell *matHeaderCellDef> Questões </th>
-        <td mat-cell *matCellDef="let element"> {{element.questions.length}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="seconds">
-        <th mat-header-cell *matHeaderCellDef> Tempo </th>
-        <td mat-cell *matCellDef="let element"> {{element.time}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
-        <td mat-cell *matCellDef="let element" style="width: 180px">
-          <button *ngIf="element.status === 'CLOSED'" matTooltip="ABRIR SALA" style="margin-right: 10px" mat-icon-button mat-raised-button
-            (click)="changeStatus(element, 'OPENED')">
-            <mat-icon color="primary">call_made</mat-icon>
-          </button>
-          <button *ngIf="element.status === 'OPENED'" matTooltip="INICIAR" style="margin-right: 10px" mat-icon-button mat-raised-button
-            (click)="changeStatus(element, 'STARTED')">
-            <mat-icon color="primary">play_arrow</mat-icon>
-          </button>
-          <button *ngIf="element.status === 'STARTED'" matTooltip="PARAR" style="margin-right: 10px" mat-icon-button mat-raised-button
-            (click)="changeStatus(element, 'CLOSED')">
-            <mat-icon color="primary">power_settings_new</mat-icon>
-          </button>
-          <button *ngIf="element.status !== 'STARTED' && element.status !== 'ENDED'" matTooltip="EDITAR" style="margin-right: 10px"
-            mat-icon-button mat-raised-button (click)="editRoom(element)">
-            <mat-icon color="primary">edit</mat-icon>
-          </button>
-          <button *ngIf="element.status !== 'STARTED' && element.status !== 'ENDED'" matTooltip="REMOVER" mat-icon-button mat-raised-button
-            (click)="remove(element)">
-            <mat-icon color="warn">delete</mat-icon>
-          </button>
-          <button *ngIf="element.status === 'ENDED'" mat-raised-button color="primary" (click)="remove(element)">
-            PONTUAÇÕES
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <button (click)="editRoom(null)" style="margin-top: 20px" mat-raised-button color="primary">CRIAR SALA</button>
+  <div *ngIf="loading" class="loading">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
 </mat-card>
